<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="25dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.talha.projectdatastructure.QuizInstruction">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textView_admin_menu"
        android:textSize="40sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/textView_selection"
        android:textSize="20sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_insert"
        android:textSize="17sp"
        android:padding="15dp"
        android:id="@+id/button_insert"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:textSize="17sp"
        android:padding="15dp"
        android:id="@+id/button_delete"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_difficulty_level"
        android:textSize="17sp"
        android:padding="15dp"
        android:id="@+id/button_difficulty_level" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/button_logout"
            android:id="@+id/button_logout"/>

    </LinearLayout>
</LinearLayout>
